modified:   .idea/gradle.xml 	modified:   .idea/misc.xml 	modified:   .idea/modules.xml 	modified:   .idea/vcs.xml 	deleted:    Hoard.iml 	modified:   app/app.iml 	modified:   app/src/main/java/com/andrewma/hoard/MainActivity.java 	modified:   app/src/main/java/com/andrewma/hoard/data/parse/ParseDataSource.java 	modified:   app/src/main/java/com/andrewma/hoard/scan/ScanFragment.java 	modified:   app/src/main/res/layout/fragment_scan.xml 	modified:   app/src/main/res/values/strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="title_device_checkout">Device Checkout/In</string>
     <string name="title_device_list">Device List</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section3">Devices Checked Out</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
